--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
             </li>
             <li>
                 <a href="https://twitter.com" target="_blank" rel="noopener" 
-                    aria-label="Visit our Twitter page (opens in a new tab)"><i class="fab fa-twitter-square"></i></i></a>
+                    aria-label="Visit our Twitter page (opens in a new tab)"><i class="fab fa-twitter-square"></i></a>
             </li>
             <li>
                 <a href="https://youtube.com" target="_blank" rel="noopener" 
